# Qclient-IOTA

./: .gitignore  CMakeLists.txt  Config.cmake.in  README.md  qclient.cpp
.github/workflows/: build-actions.yml  build-docs.yml  build-test-install.yml  codeFormat.yml
cmake/: FindQt.cmake  VersionFromGit.cmake
examples/: CMakeLists.txt  alias_output.cpp  alias_state_transition.cpp  foundry_output.cpp  full_block_with_tagged_data_payload.cpp  full_block_with_transaction_payload.cpp  full_block_with_transaction_payload.cpp.autosave  mint_nft.cpp  move_tokens_from_foundry.cpp
include/client/: qclient.hpp  qnode_block.hpp  qnode_blockId.hpp  qnode_info.hpp  qnode_outputs.hpp  qnode_response.hpp  qnode_tips.hpp
src/: qclient.cpp  qnode_block.cpp  qnode_blockId.cpp  qnode_info.cpp  qnode_outputs.cpp  qnode_response.cpp  qnode_tips.cpp
tests/: CMakeLists.txt  alias_output.cpp  alias_state_transition.cpp  foundry_output.cpp  full_block_with_tagged_data_payload.cpp  full_block_with_transaction_payload.cpp  mint_nft.cpp  move_tokens_from_foundry.cpp
